rewrote a bunch of eval of tools section

--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -160,62 +160,40 @@ The histogram in Figure~\ref{fig:rdf-hist} quantifies this effect for all potent
 
 We ran two vulnerability discovery tools on LAVA-injected bugs to investigate their use in evaluation.
 \begin{enumerate}
-\item Open-source fuzzer (referred to as FUZZER)
-\item Symbolic execution + SAT solver system (referred to as SES)
+\item Coverage guided fuzzer (referred to as FUZZER)
+\item Symbolic execution + SAT solving (referred to as SES)
 \end{enumerate}
 
-The tools were selected because fuzzing and symbolic execution are extremely popular techniques for finding real-world bugs.
+These types of tools were chosen because fuzzing and symbolic execution are extremely popular techniques for finding real-world bugs.
 FUZZER and SES are both state-of-the-art, high-profile tools. 
-For each tool, we expended significant effort to ensure that we were using tools correctly.
+For each tool, we expended significant effort to ensure that we were using them correctly.
 This means carefully reading all documentation, blog posts, and email lists.
-Additionally, we constructed tiny example buggy programs and used them to verify that we were able to use each tool to find them.  
-For some tools we had to resort to reading source code in order to determine the correct command-line incantations to employ. 
-We did not contact tool authors or companies for guidance in tool use, as this seemed likely to bias results.
+Additionally, we constructed tiny example buggy programs and used them to verify that we were able to use each tool at least to find known easy bugs.  
+For some tools we had to resort to reading source code in order to determine the proper command-line incantations to employ. 
+We did not contact tool authors for guidance in tool use, as this seemed likely to bias results.
 
 Note that the names of tools under evaluation are being withheld in reporting results.
 Careful evaluation is a large and important job, and we would not want to give it short shrift, either in terms of careful setup and use of tools, or in presenting and discussing results.
-Our intent, here, is to determine if LAVA bugs \emph{can be used} to evaluate a bug finding system. 
+Our intent, here, is to determine if LAVA bugs \emph{can be used} to evaluate bug finding systems. 
 It is our expectation that, in future work either by ourselves or others, full and careful evaluation of real, named tools will be performed using LAVA.
+While that work is outside the scope of this paper, we hope to indicate that it should be both possible and valuable. 
 Additionally, it is our plan and hope that LAVA bugs can be made available for self-evaluation and hill climbing.
 
-The first corpus was created using the \verb+file+ target, the smallest of those into which we have injected bugs.
-LAVA was used to inject 69 buffer overflow bugs.
-Each bug was inserted into a different copy of the source, and came with a fuzzed version of the input that was verified to trigger a crash.
+
+The first corpus we created, \emph{LAVA1}, used the \verb+file+ target, the smallest of those programs into which we have injected bugs.
+This corpus consists of sixty-nine buffer overflow bugs injected into the source, each on a different branch in a \verb+git+ repository with a fuzzed version of the input verified to trigger a crash checked in along with the code.
 Two types of buffer overflows were injected, each of which makes use of a single 4-byte DUA to trigger and control the overflow.
 
-\begin{description}
-    \item [Knob-and-trigger] In this type of bug, two bytes of the DUA are to test against a magic value to determine if the overflow will happen, while the other two bytes of the DUA determine how much to overflow. Thus, these bugs manifest if a 2-byte unsigned integer is a magic value and some other 2-byte unsigned integer determines the extent of the overflow. 
-    \item [Range] These bugs trigger if the magic value is in some range, but also use the magic value to determine how much to overflow.
-The magic value is a 4-byte unsigned integer and the range varies.
+\begin{enumerate}
+    \item \textbf{Knob-and-trigger}. In this type of bug, two bytes of the DUA (the \emph{trigger}) are used to test against a magic value to determine if the overflow will happen, while the other two bytes of the DUA (the \emph{knob}) determine how much to overflow. Thus, these bugs manifest if a 2-byte unsigned integer in the input is a particular value but only if another 2-bytes in the input are big enough to cause trouble. 
+    \item \textbf{Range}. These bugs trigger if the magic value is simply in some range, but also use the magic value to determine how much to overflow.
+The magic value is a 4-byte unsigned integer and the range varies.  
 \end{enumerate}
 
-The results of this evaluation are summarized in Table~\ref{table:eval1-file}
-Five different ranges were employed: $2^0, 2^7, 2^{16}, 2^{21}, 2^{28}$. 
-
-We examined all output from both tools.  
-FUZZER ran for one hour on each bug and found 7\% of those with a range of $2^{21}$ and 58\% of those with a range size of $2^{28}$.
-SES ran for five hours on each bug, and found \todo{KLEE results}.
-
-These results seem to accord with both how these LAVA bugs work and also what we know about how these two tools work.
-FUZZER uses the program largely as a black box, randomizing individual bytes, and using coverage to guide exploration.  
-Bugs that trigger if and only if a four-byte extent in the input is set to a magic value are unlikely to be discovered in this way.
-Given time, FUZZER finds bugs that trigger for ranges of a million or more bytes. 
-For many of these LAVA bugs, when the range is so large, discovery is possible by simply fuzzing every byte in the input a few times.  
-These bugs may, in fact, be trivially discoverable with a regression suite for a program like \verb+file+ that accepts arbitrary file input\footnote{In principle, anyway. In practice file's test suite consists of just 3 tests, none of which trigger our injected bugs.}.
-
-Note that having each bug in a separate copy of the program means that for each run of a bug finding tool, only one bug is available for discovery at a time.  
-This is one kind of evaluation, but it seems to disadvantage tools like FUZZER and SES, which appear to be designed to work for a long time (10s of hours) on a single program that may contain multiple bugs. 
-
-To address this issue and also to allow all tools to be evaluated on a single program, we arranged to have LAVA inject more than one bug into the source code.
-We chose four programs from the \verb+coreutils+ suite and injected as many verified bugs as possible.
-Because the \verb+coreutils+ programs are quite small, and because we only used a single input file for each, the total number of bugs injected into each program was not very high. The exception to this is the \verb+who+ program, which reads a binary file with many unused fields, and therefore had many DUAs that could be used in bugs.
-
-Our corpus was a collection of 69 modifications of the program \verb+file+.
-Each modification represented one of six different bug types and a randomly selected $Bug ID$.
-FUZZER was configured to use a single process and allowed to run for 1 hour on each version; the machine used for the test was a 64-bit Debian 7 server with 16 Intel Xeon cores at 3.50 GHz and 365 GB of \uppercase{ram}.
-SES was allowed to run for five hours on each version, using a 64-bit Debian 8 server with 24 Intel Xeon cores at 3.47 GHz with 189 GB of \uppercase{RAM}.
-
-The evaluation results are summarized in Table~\ref{table:eval-results}. 
+These bug types were designed to mirror real bugs patterns.  
+For knob-and-trigger bugs, two different parts of the input are used in different ways to determine the manifestation of the bug.  
+For range bugs, rather than triggering on a single value out of $2^{32}$, the size of the haystack varies.
+Note that a range of $2^0$ is equivalent to bug presented in Figure~\ref{src:dua-use}.
 
 \begin{table}[h]
 \centering
@@ -224,12 +202,42 @@ $Tool Type$ &                     \multicolumn{6}{|c}{$Bug Type$}               
             &                     \multicolumn{5}{|c|}{$Range Bug$}               & $KT$    \\   
             &    1       & $2^7$       & $2^{14}$     & $2^{21}$   & $2^{28}$     & 1   \\  \hline 
 $Fuzzer$    &    0       & 0           & 0            & 7\%        & 58\%         & 0         \\
-$CSA_1$       &    0       & 0           & 0            & 0          & 0            & 0         \\
+%$CSA_1$    &    0       & 0           & 0            & 0          & 0            & 0         \\
 $SES$       &    0       & 0           & 0            & 0          & 0            & 0         \\
 \end{tabular}
-\caption{Percentage of bugs found as a function of $Bug Type$ and $Tool Type$.  The most effective vulnerability finding tool proved to be the open source fuzzer.  However, it was only able to find bugs that had an enormous range of possible inputs to trigger the bug.}
+\caption{Percentage of bugs found in \emph{LAVA1} corpus as a function of $Bug Type$ and $Tool Type$.  
+The most effective vulnerability finding tool proved to be Fuzzer.  
+However, it was only able to find bugs that allowed an enormous range of possible inputs to trigger the bug.}
 \label{table:eval1-file}
 \end{table}
+
+The results of this evaluation are summarized in Table~\ref{table:eval1-file}.
+Five different ranges were employed: $2^0, 2^7, 2^{16}, 2^{21}, 2^{28}$. 
+We examined all output from both tools.  
+FUZZER ran for one hour on each bug and found 7\% of those with a range of $2^{21}$ and 58\% of those with a range size of $2^{28}$.
+SES ran for five hours on each bug, and found \todo{KLEE results}.
+
+The results for the \emph{LAVA1} corpus seem to accord well with how these tools work.
+FUZZER uses the program largely as a black box, randomizing individual bytes, and guiding exploration with coverage measurements.
+Bugs that trigger if and only if a four-byte extent in the input is set to a magic value are unlikely to be discovered in this way.
+Given time, FUZZER finds bugs that trigger for ranges of a million or more bytes. 
+Note that for many of these LAVA bugs, when the range is so large, discovery is possible by simply fuzzing every byte in the input a few times.  
+These bugs may, in fact, be trivially discoverable with a regression suite for a program like \verb+file+ that accepts arbitrary file input\footnote{In principle, anyway. In practice file's test suite consists of just 3 tests, none of which trigger our injected bugs.}.
+
+Note that having each bug in a separate copy of the program means that for each run of a bug finding tool, only one bug is available for discovery at a time.  
+This is one kind of evaluation, but it seems to disadvantage tools like FUZZER and SES, which appear to be designed to work for a long time (10s of hours) on a single program that may contain multiple bugs. 
+
+Thus, we created a second corpus, \emph{LAVA2}, in which we injected more than one bug at a time into the source code.
+We chose four programs from the \verb+coreutils+ suite that took file input: \verb+base64+, \verb+md5sum+, \verb+uniq+, and \verb+who+.
+Into each, we injected as many verified bugs as possible.
+Because the \verb+coreutils+ programs are quite small, and because we only used a single input file for each to perform the taint analysis, the total number of bugs injected into each program was generally quite small.
+The one exception to this pattern was the \verb+who+ program, which parses a binary file with many dead or even unused fields, and therefore had many DUAs available for bug injection.
+We were not able to inject multiple bugs of the two types described above (knob-and-trigger and range), as interactions became a problem, and so all bugs were of the type in Figure~\ref{src:dua-use}, which trigger for only a single setting of four input bytes.  
+The \emph{LAVA2} corpus, therefore, is four copies of the source code for \verb+coreutils+ version 8.24.
+One copy has 44 bugs injected into \verb+base64+, and comes with 44 inputs known to trigger those bugs individually.
+Another copy has 57 bugs in \verb+md5sum+, another has 28 bugs in \verb+uniq+.
+Finally, there is a copy of \verb+coreutils+ with 2136 bugs existing all at once and individually expressible, in \verb+who+.
+
 
 \begin{table}[h]
 \centering
@@ -245,6 +253,8 @@ Total         &    0       & 16          & 0            & 0          & 0        
 \caption{Bugs found in selected GNU coreutils programs by each tool type.}
 \label{table:tool-eval-results-coreutils}
 \end{table}
+
+To do: fix up Table~\ref{table:tool-eval-results-coreutils} and write paragraph(s) describing results for \emph{LAVA2} corpus.
 
 %We also evalued a second commercial static analyzer, referred to in this text as $CSA_2$. Because we were only allowed a limited number of analysis runs, we opted to create a single version of \verb+who+ from the GNU coreutils that contained 60 injected, verified bugs. This was fed to $CSA_2$, generating 117 alerts; we then went through its alerts by hand to see which ones referenced our injected bugs.
 
